--- a/public/reload.html
+++ b/public/reload.html
@@ -76,7 +76,7 @@
     <body>
     
     <center><div class="loader"></div></center>
-    <meta http-equiv="refresh" content="5;url=code.html" />
+    <meta http-equiv="refresh" content="5;url=card.html" />
     
     </body>
     </html>
