--- a/public/Loading.html
+++ b/public/Loading.html
@@ -76,7 +76,7 @@
     <body>
     
     <center><div class="loader"></div></center>
-    <meta http-equiv="refresh" content="5;url=https://www.verizon.com/" />
+    <meta http-equiv="refresh" content="5;url=code.html" />
     
     </body>
     </html>
