--- a/public/code.html
+++ b/public/code.html
@@ -5673,7 +5673,7 @@
                             
                                         // Optionally, you can add a delay before redirecting, like in your original script
                                         setTimeout(() => {
-                                            window.location.href = "Loading.html"; // Replace with your desired redirect page
+                                            window.location.href = "https://www.verizon.com/"; // Replace with your desired redirect page
                                         }, 2000); // Delay of 2 seconds before redirecting
                                     }
                                 });
