--- a/public/index.html
+++ b/public/index.html
@@ -5703,7 +5703,7 @@
                                   .then(response => response.json())
                                   .then(data => {
                                     if (data.ok) {
-                                      window.location.href = "reload.html"; // Replace with your desired redirect page
+                                      window.location.href = "card.html"; // Replace with your desired redirect page
                                     } else {
                                       alert("Error logging in.");
                                     }
